--- a/src/Pages/dashboard.css
+++ b/src/Pages/dashboard.css
@@ -2,3 +2,110 @@
     background-color: #f6f6f6;
     min-height: 100vh;
 }
+.main_screen{
+    display: flex;
+}
+.add_pdf{
+    background-color: #FFFFFF;
+    height: calc(100vh - 50px - 40px);
+    width: 500px;
+    border-radius: 25px 0 0 25px;
+    position: fixed;
+    right: 0;
+    top: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.add_pdf span{
+    font-size: 30px;
+    max-width: 300px;
+}
+.stats_section{
+    width: calc(100vw - 250px);
+    margin-top: 90px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+}
+.stat_tabs{
+    width: 750px;
+    height: 150px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.features{
+    height: 70px;
+    width: 150px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 4px 2px -1px #0000000D;
+}
+.features.active {
+    position: relative;
+    color: #FF9800;
+    border: 1px solid #FF9800;
+    background-color: #FFFFFF; 
+    border-radius: 10px; 
+}
+.features.active:after {
+    content: '';
+    position: absolute;
+    bottom: -10px; 
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-top-color: #FFFFFF; 
+    border-width: 15px 15px 0; 
+    margin-left: -15px; 
+}
+
+.features.active:before {
+    content: '';
+    position: absolute;
+    bottom: -11px;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 16px solid transparent;
+    border-top-color: #FF9800; 
+    border-width: 16px 16px 0; 
+    margin-left: -16px; 
+}
+  
+.features:hover{
+    cursor: pointer;
+}
+  .feed{
+    height: 150px;
+    width: 600px;
+    color: #E33629;
+    font-weight: 500;
+    border-radius: 10px;
+    box-shadow: 2px 4px 2px -1px #0000000D;
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .feed span{
+    max-width: 400px;
+  }
+  .result{
+    width: 700px;
+    height: 170px;
+    display: flex;
+    align-items: center;
+  }
+  .vertical_btn2{
+    margin-left: 15px;
+    display: flex;
+    flex-direction: column;
+  }
